--- a/gameUp/home.html
+++ b/gameUp/home.html
@@ -125,7 +125,7 @@
                 <!-- Coluna única do rodapé -->
                 <div class="col-sm-12">
 
-                    &copy; Marble 2019
+                    &copy; GameUp 2019
 
                 </div> <!-- Coluna única do rodapé -->
 
