--- a/gameUp/home.html
+++ b/gameUp/home.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Marble - Home</title>
+    <title>GameUp - Home</title>
 
     <!-- Fontes -->
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
@@ -26,14 +26,14 @@
 
         <!-- Barra de navegação -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="logo gameup"></a>
+            <a class="navbar-brand" href="home.html"><img src="./img/logo.png" alt="logo gameup"></a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
+                        <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                 </ul>
             </div>
