--- a/gameUp/home.html
+++ b/gameUp/home.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="profile.html">Profile</a>
+                        <a class="nav-link" href="profile.html" id="profileTab">Profile</a>
                     </li>
                 </ul>
             </div>
@@ -149,6 +149,7 @@
                 $('#userHello').hide()
                 $('#userName').hide()
                 $('#logout').hide()
+                $('#profileTab').hide()
             }
         })
 
