add search button

--- a/gameUp/profile.html
+++ b/gameUp/profile.html
@@ -39,6 +39,10 @@
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                 </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
             </div>
             <a class="btn btn-primary mr-2" id="loginSignInButton" href="./login.html">Login / SignIn</a>
             <span class="d-flex" id="helloUser">
